Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/FloatingPointChanges/BadConstructorModifiers.out
BadConstructorModifiers.java:13:14: compiler.err.mod.not.allowed.here: strictfp
1 error
